--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="content-center brand">
                     <img class="n-logo" src="./assets/img/printpod-logo.png" alt="">
                     <h2 class="h1-seo">Free printing. On campus. For everyone.</h2>
-                    <h4> Coming soon to UNSW </h4>
+                    <h4> Coming soon! </h4>
                 </div>
             
             </div>
