--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.jpg">
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/img/apple-icon-ipad.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/apple-icon-iphone.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="./assets/img/apple-icon-ipad-retina.png">
     <link rel="icon" type="image/png" href="./assets/img/favicon.jpg">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>PrintPod - Free printing for students!</title>
@@ -87,7 +90,7 @@
                 <div class="content-center brand">
                     <img class="n-logo" src="./assets/img/printpod-logo.png" alt="">
                     <h2 class="h1-seo">Free printing. On campus. For everyone.</h2>
-                    <h4> Coming soon! </h4>
+                    <h4> Coming soon to UNSW!</h4>
                 </div>
             
             </div>
