--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </nav>
     <!-- End Navbar -->
     <div class="wrapper">
-        <!--<div class="page-header clear-filter" filter-color="orange">-->
+        <div class="page-header clear-filter"> <!--filter-color="orange">-->
             <div class="page-header-image" data-parallax="true" style="background-image: url('./assets/img/header.jpg');">
             </div>
             <div class="container">
