--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
     <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
         <div class="container">
             <div class="navbar-translate">
-                <a class="navbar-brand" href="http://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip" title="If you're a student, you'll love us!" data-placement="bottom" target="_blank">
-                    PRINTPOD
+                <a class="navbar-brand" href="" rel="tooltip" title="If you're a student, you'll love us!" data-placement="bottom" target="_blank">
+                    <!-- PRINTPOD-->
+                    <img class="n-logo" src="./assets/img/printpod-logo-navbar.png" alt="">
                 </a>
                 <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-bar bar1"></span>
@@ -255,7 +256,7 @@
                     &copy;
                     <script>
                         document.write(new Date().getFullYear())
-                    </script>, Designed and coded with ☕️❤️ by PrintPod
+                    </script>. Designed and coded with ☕️❤️ by PrintPod
                     
                 </div>
             </div>
