--- a/index.html
+++ b/index.html
@@ -84,14 +84,17 @@
     </nav>
     <!-- End Navbar -->
     <div class="wrapper">
-        <div class="page-header clear-filter"> <!--filter-color="orange">-->
-            <div class="page-header-image" data-parallax="true" style="background-image: url('./assets/img/header.jpg');">
+        <div class="page-header clear-filter"> <filter-color="orange">
+            <div class="page-header-image" data-parallax="true" style="background-image: url('./assets/img/unsw.jpg');">
             </div>
             <div class="container">
                 <div class="content-center brand">
-                    <img class="n-logo" src="./assets/img/printpod-logo.png" alt="">
-                    <h2 class="h1-seo">Free printing. On campus. For everyone.</h2>
-                    <h4> Coming soon to UNSW!</h4>
+                    <!-- <img class="n-logo" src="./assets/img/printpod-logo.png" alt=""> -->
+                    <h1 class="h1-seo"> <b> Free printing. </b> On campus. <b> <br> For everyone. </br> </b> </h1>
+                    <h4> Coming first to UNSW</h4>
+                    <button class="btn btn-neutral"> STUDENTS </button>
+                    &nbsp;
+                    <button class="btn btn-neutral"> ADVERTISERS </button>
                 </div>
             
             </div>
@@ -201,7 +204,7 @@
         <div class="section section-contact-us text-center">
             <div class="container">
                 <h2 class="title">Want to advertise to students?</h2>
-                <p class="description">Get in touch with us</p>
+                <h4 class="description">Get in touch with us</h4>
                 <div class="row">
                     <div class="col-lg-6 text-center col-md-8 ml-auto mr-auto">
                         <div class="input-group input-lg">
