--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
             <div class="container">
                 <div class="content-center brand">
                     <!-- <img class="n-logo" src="./assets/img/printpod-logo.png" alt=""> -->
-                    <h1 class="h1-seo"> <b> Free printing. </b> On campus. <b> <br> For everyone. </br> </b> </h1>
+                    <h1 class="h1-seo"> <b> Free printing. On campus. <br> For everyone. </br> </b> </h1>
                     <h4> Coming first to UNSW</h4>
                     <button class="btn btn-neutral"> STUDENTS </button>
                     &nbsp;
-                    <button class="btn btn-neutral"> ADVERTISERS </button>
+                    <button class="btn btn-neutral" href="#advertiser-tag" >ADVERTISERS </button>
                 </div>
             
             </div>
@@ -192,7 +192,7 @@
                                 <img src="./assets/img/chris.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                                 <h4 class="title">Chris Basilio</h4>
                                 <p class="category text-primary">Cofounder</p>
-                                <p class="description">Aeronotical Engineering and Commerce student, majoring in Finance</p>
+                                <p class="description">Aeronautical Engineering and Commerce student, majoring in Finance</p>
                                  <a href="https://www.twitter.com/PrintPodAU" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a>
                                 <a href="https://www.linkedin.com/in/chris-basilio/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a></i></a>
                             </div>
@@ -203,6 +203,7 @@
         </div>
         <div class="section section-contact-us text-center">
             <div class="container">
+                <a name="advertiser-tag">
                 <h2 class="title">Want to advertise to students?</h2>
                 <h4 class="description">Get in touch with us</h4>
                 <div class="row">
