--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <a class="navbar-brand" href="" rel="tooltip" title="If you're a student, you'll love us!" data-placement="bottom" target="_blank">
                     <!-- PRINTPOD-->
                     <img class="n-logo" src="./assets/img/printpod-logo-navbar.png" alt="">
+                    <!--<h3><b>PRINT</b>POD</h3 -->
                 </a>
                 <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-bar bar1"></span>
@@ -49,13 +50,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./documentation/tutorial-components.html" target="_blank">
+                        <a class="nav-link" href="javascript:void(0)" target="_blank">
                             <i class="now-ui-icons files_paper"></i>
                             <p>Components</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-neutral" href="https://www.creative-tim.com/product/now-ui-kit-pro" target="_blank">
+                        <a class="nav-link btn btn-neutral" href="javascript:void(0)" target="_blank">
                             <i class="now-ui-icons users_circle-08"></i>
                             <p>LOGIN / SIGNUP</p>
                         </a>
@@ -67,13 +68,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank">
+                        <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/printpodAU" target="_blank">
                             <i class="fa fa-facebook-square"></i>
                             <p class="d-lg-none d-xl-none">Facebook</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank">
+                        <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com/" target="_blank">
                             <i class="fa fa-instagram"></i>
                             <p class="d-lg-none d-xl-none">Instagram</p>
                         </a>
@@ -92,9 +93,10 @@
                     <!-- <img class="n-logo" src="./assets/img/printpod-logo.png" alt=""> -->
                     <h1 class="h1-seo"> <b> Free printing. On campus. <br> For everyone. </br> </b> </h1>
                     <h4> Coming first to UNSW</h4>
-                    <button class="btn btn-neutral"> STUDENTS </button>
-                    &nbsp;
-                    <button class="btn btn-neutral" href="#advertiser-tag" >ADVERTISERS </button>
+                    <button class="btn btn-neutral"> <b> STUDENTS </b> </button>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <!-- Create modal for Advertisers button -->
+                    <button class="btn btn-neutral" data-toggle="modal" data-target="myModal"></button>
                 </div>
             
             </div>
@@ -203,7 +205,7 @@
         </div>
         <div class="section section-contact-us text-center">
             <div class="container">
-                <a name="advertiser-tag">
+                <a name="advertiser-tag"></a>
                 <h2 class="title">Want to advertise to students?</h2>
                 <h4 class="description">Get in touch with us</h4>
                 <div class="row">
@@ -212,7 +214,7 @@
                             <span class="input-group-addon">
                                 <i class="now-ui-icons users_circle-08"></i>
                             </span>
-                            <input type="text" class="form-control" placeholder="First Name...">
+                            <input type="text" class="form-control" placeholder= "First Name...">
                         </div>
                         <div class="input-group input-lg">
                             <span class="input-group-addon">
@@ -240,18 +242,18 @@
                             </a>
                         </li>
                         <li>
-                            <a href="http://presentation.creative-tim.com">
+                            <a href="">
                                 About Us
                             </a>
                         </li>
                         <li>
-                            <a href="http://blog.creative-tim.com">
+                            <a href="">
                                 Blog
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
-                                MIT License
+                            <a href="">
+                                Careers
                             </a>
                         </li>
                     </ul>
