--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="./assets/img/blurred-image-1.jpg">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)" onclick="scrollToDownload()">
+                        <a class="nav-link" href="http://www.facebook.com" onclick="scrollToDownload()">
                             <i class="now-ui-icons arrows-1_cloud-upload-94"></i>
-                            <p>Print your documents</p>
+                            <p>Print your Documents</p>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -93,10 +93,11 @@
                     <!-- <img class="n-logo" src="./assets/img/printpod-logo.png" alt=""> -->
                     <h1 class="h1-seo"> <b> Free printing. On campus. <br> For everyone. </br> </b> </h1>
                     <h4> Coming first to UNSW</h4>
-                    <button class="btn btn-neutral"> <b> STUDENTS </b> </button>
+                    <button class="btn btn-neutral" href=""> <b> STUDENTS </b> </button>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <!-- Create modal for Advertisers button -->
-                    <button class="btn btn-neutral" data-toggle="modal" data-target="myModal"></button>
+                    <button class="btn btn-neutral" href=""> <b> ADVERTISERS </b> </button>
+                    <!-- Create modal for Advertisers button 
+                    <button class="btn btn-neutral" data-toggle="modal" data-target="myModal"></button> -->
                 </div>
             
             </div>
