--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
                             <div class="team-player">
                                 <img src="./assets/img/rithvik.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                                 <h4 class="title">Rithvik Badinedi</h4>
-                                <p class="category text-primary">Business Development and Marketing</p>
+                                <p class="category text-primary"> Sales and Marketing</p>
+                                <p class="description"> Medical Science student, majoring in Pharmacology</p>
                                 <a href="https://www.twitter.com/PrintPodAU" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a>
                                 <a href="https://www.linkedin.com/in/rithvik-badinedi-94969b116/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a>
                             </div>
@@ -194,6 +195,7 @@
                                 <img src="./assets/img/chris.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                                 <h4 class="title">Chris Basilio</h4>
                                 <p class="category text-primary"> Operations and Finance </p>
+                                <p class="description"> Aeronautical Engineering and Commerce student, majoring in Finance </p>
                                  <a href="https://www.twitter.com/PrintPodAU" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a>
                                 <a href="https://www.linkedin.com/in/chris-basilio/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a></i></a>
                             </div>
