--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <div class="team-player">
                                 <img src="./assets/img/vishnuu.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                                 <h4 class="title">Vishnuu Panickar</h4>
-                                <p class="category text-primary">Technology and Data</p>
+                                <p class="category text-info">Technology and Data</p>
                                 <p class="description">Actuarial Studies and Economics student, majoring in Data Science </p>
                                 <a href="https://www.twitter.com/vishnuupanickar" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a>
                                 <a href="https://www.linkedin.com/in/vishnuupanickar" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a>
@@ -184,7 +184,7 @@
                             <div class="team-player">
                                 <img src="./assets/img/rithvik.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                                 <h4 class="title">Rithvik Badinedi</h4>
-                                <p class="category text-primary"> Sales and Marketing</p>
+                                <p class="category text-info"> Sales and Marketing</p>
                                 <p class="description"> Medical Science student, majoring in Pharmacology</p>
                                 <a href="https://www.twitter.com/PrintPodAU" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a>
                                 <a href="https://www.linkedin.com/in/rithvik-badinedi-94969b116/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a>
@@ -194,7 +194,7 @@
                             <div class="team-player">
                                 <img src="./assets/img/chris.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                                 <h4 class="title">Chris Basilio</h4>
-                                <p class="category text-primary"> Operations and Finance </p>
+                                <p class="category text-info"> Operations and Finance </p>
                                 <p class="description"> Aeronautical Engineering and Commerce student, majoring in Finance </p>
                                  <a href="https://www.twitter.com/PrintPodAU" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a>
                                 <a href="https://www.linkedin.com/in/chris-basilio/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a></i></a>
