--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <h2 class="title">Meet the team</h2>
                 <div class="team">
                     <div class="row">
-                        <div class="col-sm-auto">
+                        <div class="col-md-4">
                             <div class="team-player">
                                 <img src="./assets/img/vishnuu.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                                 <h4 class="title">Vishnuu Panickar</h4>
@@ -180,7 +180,7 @@
                                 <!-- <a href="https://www.facebook.com/vishnuupanickar" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a> -->
                             </div>
                         </div>
-                        <div class="col-sm-auto">
+                        <div class="col-md-4">
                             <div class="team-player">
                                 <img src="./assets/img/rithvik.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                                 <h4 class="title">Rithvik Badinedi</h4>
@@ -190,7 +190,7 @@
                                 <a href="https://www.linkedin.com/in/rithvik-badinedi-94969b116/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a>
                             </div>
                         </div>
-                        <div class="col-sm-auto">
+                        <div class="col-md-4">
                             <div class="team-player">
                                 <img src="./assets/img/chris.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                                 <h4 class="title">Chris Basilio</h4>
