--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                             <textarea class="form-control" name="name" rows="4" cols="80" placeholder="Type a message..."></textarea>
                         </div>
                         <div class="send-button">
-                            <a href="#pablo" class="btn btn-primary btn-round btn-block btn-lg">Send Message</a>
+                            <a href="#pablo" class="btn btn-success btn-round btn-block btn-lg">Send Message</a>
                         </div>
                     </div>
                 </div>
@@ -260,7 +260,7 @@
                     </ul>
                 </nav>
                 <div class="copyright">
-                    &copy;
+                    &copy; &copy; &copy; &copy; &copy; &copy; &copy; &copy; &copy; &copy; &copy; &copy;
                     <script>
                         document.write(new Date().getFullYear())
                     </script>. Designed and coded with ☕️❤️ by PrintPod
