--- a/index.html
+++ b/index.html
@@ -68,9 +68,14 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/printpodAU" target="_blank">
-                            <i class="fa fa-facebook-square"></i>
-                            <p class="d-lg-none d-xl-none">Facebook</p>
+                      <a class="btn btn-primary btn-icon btn-round btn-twitter" href="https://www.twitter.com/PrintPodAU"> 
+                      <i class="fa fa-twitter"></i>
+                    </a>
+
+                    <!--   <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/printpodAU" target="_blank">
+
+<i class="fa fa-facebook-square"></i>
+                            <p class="d-lg-none d-xl-none">Facebook</p> -->
                         </a>
                     </li>
                     <li class="nav-item">
@@ -177,7 +182,7 @@
                                 <p class="description">Actuarial Studies and Economics student, majoring in Data Science </p>
                                 <a href="https://www.twitter.com/vishnuupanickar" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a>
                                 <a href="https://www.linkedin.com/in/vishnuupanickar" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a>
-                                <!-- <a href="https://www.facebook.com/vishnuupanickar" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a> -->
+                                <a href="mailto:vishnuu@printpod.co" class="btn btn-primary btn-icon btn-round"><i class="fa fa-envelope"></i></a>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -186,8 +191,10 @@
                                 <h4 class="title">Rithvik Badinedi</h4>
                                 <p class="category text-info"> Sales and Marketing</p>
                                 <p class="description"> Medical Science student, majoring in Pharmacology</p>
-                                <a href="https://www.twitter.com/PrintPodAU" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a>
+                                <a href="https://www.twitter.com/PrintPodAU" class="btn btn-primary btn-icon
+                                btn-round"><i class="fa fa-twitter"></i></a>
                                 <a href="https://www.linkedin.com/in/rithvik-badinedi-94969b116/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a>
+                                <a href="mailto:rithvik@printpod.co" class="btn btn-primary btn-icon btn-round"><i class="fa fa-envelope"></i></a>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -198,6 +205,7 @@
                                 <p class="description"> Aeronautical Engineering and Commerce student, majoring in Finance </p>
                                  <a href="https://www.twitter.com/PrintPodAU" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a>
                                 <a href="https://www.linkedin.com/in/chris-basilio/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a></i></a>
+                                <a href="mailto:chris@printpod.co" class="btn btn-primary btn-icon btn-round"><i class="fa fa-envelope"></i></a>
                             </div>
                         </div>
                     </div>
@@ -259,8 +267,9 @@
                         </li>
                     </ul>
                 </nav>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <div class="copyright">
-                    &copy; &copy; &copy; &copy; &copy; &copy; &copy; &copy; &copy; &copy; &copy; &copy;
+                    &copy;
                     <script>
                         document.write(new Date().getFullYear())
                     </script>. Designed and coded with ☕️❤️ by PrintPod
