--- a/index.html
+++ b/index.html
@@ -101,9 +101,8 @@
                    <button class="btn btn-neutral" href="#myModal"> <b> ADVERTISERS </b> </button> -->
                     
                   <!-- Button trigger modal -->
-<button class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-  Launch demo modal
-</button>
+<button class="btn btn-neutral" data-toggle="modal" data-target="#myModal">
+<b>FOR ADVERTISERS </b></button>
 
 <!-- Modal Core -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
