--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./webapp/print.html" target="./webapp/print.html">
+                        <a class="nav-link" href="./webapp/print.html" target="_self">
                             <i class="now-ui-icons users_circle-08"></i>
                             <p>LOGIN / SIGNUP</p>
                         </a>
