--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/webapp/purple_bg.jpg" target="_blank">
+                        <a class="nav-link" href="/webapp/print.html" target="_blank">
                             <i class="now-ui-icons users_circle-08"></i>
                             <p>LOGIN / SIGNUP</p>
                         </a>
