--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body class="landing-page sidebar-collapse">
     <!-- Navbar -->
 <!--    <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400"> -->
-    <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent" color-on-scroll="21232a">
+    <nav class="navbar navbar-expand-lg bg-primary fixed-top" color-on-scroll="21232a">
         <div class="container">
             <div class="navbar-translate">
                 <a class="navbar-brand" href="" rel="tooltip" title="If you're a student, you'll love us!" data-placement="bottom" target="_blank">
