--- a/webapp/print.html
+++ b/webapp/print.html
@@ -145,6 +145,12 @@
                                     </div>
 
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
+                                        <input class="mdl-textfield__input " type="text " pattern="-?[0-9]*(\.[0-9]+)? " id="studentID ">
+                                        <label class="mdl-textfield__label " for="studentID ">Student ID (just numbers)</label>
+                                        <span class="mdl-textfield__error ">Please enter your student ID numbers only, without the 'z'</span>
+                                    </div>
+
+                                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
                                         <input class="mdl-textfield__input " type="text " pattern="-?[0-9]*(\.[0-9]+)? " id="mobileNumber ">
                                         <label class="mdl-textfield__label " for="mobileNumber ">Mobile Number</label>
                                         <span class="mdl-textfield__error ">Input is not a number!</span>
@@ -154,11 +160,6 @@
                                         <input class="mdl-textfield__input " type="password " id="SetPassword ">
                                         <label class="mdl-textfield__label " for="SetPassword ">Set Password</label>
                                     </div>
-
-                                    <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect termsLabel" for="ageFlag">
-                                <input type="checkbox" id="ageFlag" class="mdl-checkbox__input " checked>
-                                <span class="mdl-checkbox__label ">I herby certify that I am atleast 18 years of age</span>
-                                </label>
 
                                     <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="termsFlag">
                                 <input type="checkbox" id="termsFlag" class="mdl-checkbox__input ">
