firebase auth working

--- a/webapp/print.html
+++ b/webapp/print.html
@@ -124,7 +124,7 @@
             <!-- Login -->
 
             <div class="col-lg-6 col-lg-offset-right-1 col-md-6 col-md-offset-right-1 col-sm-12 col-xs-12 no-padding">
-                <div class="mlt-content">
+                <div class="mlt-content" id='window'>
                     <ul class="nav nav-tabs">
                         <li class="active"><a href="#register" data-toggle="tab">Register</a></li>
                         <li><a href="#login" data-toggle="tab">Login</a></li>
@@ -173,7 +173,7 @@
                                 <span class="mdl-checkbox__label ">I have read and accept the <a href="# ">Terms of Use</a> and <a href="# ">Privacy Policy</a></span>
                                 </label>
 
-                                    <button class="btn lt-register-btn " id='register-btn'>register now<i class="icon-right pull-right "></i></button>
+                                    <button class="btn lt-register-btn" type='button' id='register-btn' >register now<i class="icon-right pull-right "></i></button>
                                 </div>
                             </form>
                             <!--register form-->
@@ -214,7 +214,7 @@
                                 </div>
 
                                 <div class="col-lg-10 col-lg-offset-1 col-lg-offset-right-1 col-md-10 col-md-offset-1 col-md-offset-right-1 col-sm-12 col-xs-12 pull-right ">
-                                    <button class="btn lt-register-btn" id='login-btn'>login<i class="icon-right "></i></button>
+                                    <button type='button' class="btn lt-register-btn" id='login-btn'>login<i class="icon-right "></i></button>
                                 </div>
                             </form>
                             <!--login form-->
